<resources>

    <!--Data akan tayang-->
    <array name="data_photo_akan_tayang">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>

        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_mortalengine</item>

    </array>

    <string-array name="data_akan_tayang">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>

        <item>Creed II</item>
        <item>How To Train Your Dragon-The Hidden World</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mortal Engines</item>

    </string-array>

    <string-array name="data_desc_at">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally.
            She has just about given up on her dream to make it big as a singer — until Jack coaxes her
            into the spotlight. But even…</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater
            kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans
            to conquer the remaining oceanic people…</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide,
            a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John
            Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970.
            Hit songs become instant classics.…</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian
            beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world,
            discovers Bumblebee, battle-scarred…</item>


        <item>Between personal obligations and training for his next big fight against an opponent
            with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of
            an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s
            reign as village chief is tested…</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural
            abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities.
            Meanwhile, the shadowy presence…</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia,
            so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>Many thousands of years in the future, Earth\’s cities roam the globe on huge wheels,
            devouring each other in a struggle for ever diminishing resources.
            On one of these massive traction cities, the old London, Tom…</item>

    </string-array>

    <string-array name="data_year_at">
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>

        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
    </string-array>

    <string-array name="data_ratting_at">
        <item>75</item>
        <item>68</item>
        <item>70</item>
        <item>80</item>
        <item>65</item>

        <item>67</item>
        <item>77</item>
        <item>66</item>
        <item>64</item>
        <item>60</item>
    </string-array>

    <string-array name="link_trailer_at">
        <item>nSbzyEJ8X9E</item>
        <item>WDkg3h8PCVU</item>
        <item>o2AsIXSh2xo</item>
        <item>mP0VHJYFOAU</item>
        <item>lcwmDAYt22k</item>

        <item>ApQbQ0iJQO0</item>
        <item>SkcucKDrbOI</item>
        <item>95ghQs5AmNk</item>
        <item>QAhcDHRZOak</item>
        <item>IRsFc2gguEg</item>
    </string-array>

    <string-array name="link_web_at">
        <item>https://www.themoviedb.org/movie/332562-a-star-is-born?language=en-US</item>
        <item>https://www.themoviedb.org/movie/297802-aquaman?language=en-US</item>
        <item>https://www.themoviedb.org/movie/405774-bird-box?language=en-US</item>
        <item>https://www.themoviedb.org/movie/424694-bohemian-rhapsody?language=en-US</item>
        <item>https://www.themoviedb.org/movie/424783-bumblebee?language=en-US</item>

        <item>https://www.themoviedb.org/movie/480530-creed-ii?language=en-US</item>
        <item>https://www.themoviedb.org/movie/166428-how-to-train-your-dragon-3?language=en-US</item>
        <item>https://www.themoviedb.org/movie/450465-glass?language=en-US</item>
        <item>https://www.themoviedb.org/movie/399402-hunter-killer?language=en-US</item>
        <item>https://www.themoviedb.org/movie/428078-mortal-engines?language=en-US</item>
    </string-array>

    <!--End of data akan tayang-->


    <!--Data sedang tayang-->
    <array name="data_photo_sedang_tayang">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string-array name="data_sedang_tayang">
        <item>Avengers: Infinity War</item>
        <item>Once Upon a Deadpool</item>
        <item>Mary Poppins Returns</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_desc_st">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy…</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with…</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect…</item>
    </string-array>

    <string-array name="data_year_st">
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
    </string-array>

    <string-array name="data_ratting_st">
        <item>83</item>
        <item>75</item>
        <item>66</item>
        <item>84</item>
        <item>66</item>
    </string-array>

    <string-array name="link_trailer_st">
        <item>6ZfuNTqbHE8</item>
        <item>PCf03KXyzIg</item>
        <item>-3jsfXDZLIY</item>
        <item>g4Hbz2jLxvQ</item>
        <item>u9Mv98Gr5pY</item>
    </string-array>

    <string-array name="link_web_st">
        <item>https://www.themoviedb.org/movie/299536-avengers-infinity-war</item>
        <item>https://www.themoviedb.org/movie/567604-once-upon-a-deadpool?language=en-US</item>
        <item>https://www.themoviedb.org/movie/400650-mary-poppins-returns?language=en-US</item>
        <item>https://www.themoviedb.org/movie/324857-spider-man-into-the-spider-verse</item>
        <item>https://www.themoviedb.org/movie/335983-venom</item>
    </string-array>

    <!--End of data sedang tayang-->

    <string name="menu_home">Home</string>
    <string name="menu_sedang_tayang">Sedang Tayang</string>
    <string name="menu_segera_tayang">Akan Tayang</string>
    <string name="menu_contact_us">Contact Us</string>

    <string name="app_name">MovieCatalogue</string>
    <string name="nama_film">Nama Film</string>

    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="rating">Rating</string>
    <string name="judul_film">Judul Film</string>
    <string name="tahun">(2019)</string>
    <string name="overview">Overview</string>
    <string name="link">http://www.google.com</string>
    <string name="myEmail">(patriciafiona3@gmail.com)</string>

</resources>
